Revert "Try engine.io", performance dropped
This reverts commit db946af3da6a82f730d197c30816e1d65ec38866.

--- a/www/index.html
+++ b/www/index.html
@@ -29,14 +29,13 @@
         background-color: blue;
       }
     </style>
-    <script type="text/javascript" src="engine.io.js"></script>
     <script>
       var socket = {
         send: function(msg) {console.log(msg)},
         close: function() {}
       };
       function pleaseDo() {
-        socket = new eio("ws://"+location.hostname+":3400");
+        socket = new WebSocket("ws://"+location.hostname+":3400");
         socket.onopen = function(evt){
           alert("Socket has been opened!\n"+evt);
           registerEvents();
