--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>WebSocketTest</title>
     <link type="text/css" rel="stylesheet" href="overlay.css" />
     <script type="text/javascript" src="overlay.js"></script>
